@@ -1,7 +1,7 @@
 #! /bin/bash
 
 # libtool - Provide generalized library-building support services.
-# Generated automatically by config.status (proj) 4.7.0
+# Generated automatically by config.status (proj) 4.8.0
 # Libtool was configured on host gdal65:
 # NOTE: Changes made to this file will be lost: look at ltmain.sh.
 #
